kuber/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  labels:
    app: fastapi
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: krotym2/fastapi:latest
          ports:
            - containerPort: 80
              name: fastapi
          command: ["uvicorn", "main:app", "--proxy-headers", "--host", "0.0.0.0", "--port", "80"]
