kuber/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fast-api-pod
  labels:
    app: fastapi
spec:
  containers:
  - name: fastapi
    image: krotym2/fastapi:latest
    ports:
    - containerPort: 8000
      name: fastapi
    command: ["uvicorn", "main:app", "--reload"]
